Fix z-index issues

--- a/src/css-modules/cart.module.css
+++ b/src/css-modules/cart.module.css
@@ -4,14 +4,13 @@
     right: -350px;
     height: 100vh;
     top: 0;
-    z-index: 9999;
+    z-index: 4000;
     background-color: #202020;
     transition: right 0.2s ease-in-out;
     font-family: "Roboto", sans-serif;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    
+    justify-content: space-between; 
 }
 
 .cartOpen {
